fixed heading space on mobile.

--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -1,13 +1,16 @@
 .app-bar {
   background: white !important;
-  }
-
+}
 
 .nav {
   display: flex;
   flex: 1;
   height: 100%;
   justify-content: center;
+
+  @media screen and (max-width: 480px) {
+    margin-left: -11px;
+  }
 
   & > button {
     span {
